# test_cicd

./: Dockerfile  README.md  calculator.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
tests/: test_calc.py
